// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chips /> Snapshots counter should match snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7E0",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
      },
    ]
  }
>
  <Text
    fontSize="medium"
    inverted={false}
    light={false}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#231B22",
          "flexShrink": 1,
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 12,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots counter should match snapshot with more than one Chip 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D8385E",
            "borderRadius": 8,
            "color": "#FFFFFF",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      52
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Personal trainers
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D8385E",
            "borderRadius": 8,
            "color": "#FFFFFF",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      +999
    </Text>
  </View>,
]
`;

exports[`<Chips /> Snapshots icon should match selected snapshot 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Location
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Personal trainers
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Activities
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D8385E",
            "borderRadius": 8,
            "color": "#FFFFFF",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      8
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Language
    </Text>
    <Text
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D8385E",
            "borderRadius": 8,
            "color": "#FFFFFF",
            "display": "flex",
            "flexShrink": 0,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "500",
            "height": 16,
            "justifyContent": "center",
            "lineHeight": 16,
            "marginLeft": 4,
            "minWidth": 16,
            "overflow": "hidden",
            "paddingLeft": 5,
            "paddingRight": 5,
          },
        ]
      }
    >
      8
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Categories
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Availability
    </Text>
  </View>,
]
`;

exports[`<Chips /> Snapshots selected should match snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFEEF2",
        "borderColor": "transparent",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
      },
    ]
  }
>
  <Text
    fontSize="medium"
    inverted={false}
    light={false}
    numberOfLines={1}
    selected={true}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "500",
        },
        {
          "color": "#D8385E",
          "flexShrink": 1,
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 12,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots selected should match snapshot with more than one Chip 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFEEF2",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={true}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "500",
          },
          {
            "color": "#D8385E",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Personal trainers
    </Text>
  </View>,
]
`;

exports[`<Chips /> Snapshots should match snapshot 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7E0",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
      },
    ]
  }
>
  <Text
    fontSize="medium"
    inverted={false}
    light={false}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#231B22",
          "flexShrink": 1,
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 12,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots should match snapshot with a long text 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  disabled={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#D7D7E0",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
      },
    ]
  }
>
  <Text
    fontSize="medium"
    inverted={false}
    light={false}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#231B22",
          "flexShrink": 1,
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 12,
        },
      ]
    }
  >
    Classes with a very long text
  </Text>
</View>
`;

exports[`<Chips /> Snapshots should match snapshot with disabled prop 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  disabled={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  selected={false}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F5F5FA",
        "borderColor": "#D7D7E0",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "#9898A6",
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "flex-start",
        "marginRight": 8,
        "maxWidth": 216,
        "overflow": "hidden",
        "paddingBottom": 8,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 8,
      },
    ]
  }
>
  <Text
    fontSize="medium"
    inverted={false}
    light={false}
    numberOfLines={1}
    selected={false}
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#231B22",
          "flexShrink": 1,
          "fontFamily": "Rubik",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 12,
        },
      ]
    }
  >
    Classes
  </Text>
</View>
`;

exports[`<Chips /> Snapshots should match snapshot with more than one Chip 1`] = `
[
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Classes
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Gyms and studios
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    selected={false}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#D7D7E0",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginRight": 8,
          "maxWidth": 216,
          "overflow": "hidden",
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
        },
      ]
    }
  >
    <Text
      fontSize="medium"
      inverted={false}
      light={false}
      numberOfLines={1}
      selected={false}
      style={
        [
          {
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "#231B22",
            "flexShrink": 1,
            "fontFamily": "Rubik",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 12,
          },
        ]
      }
    >
      Personal trainers
    </Text>
  </View>,
]
`;
